--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
     position: absolute;
     top: 80px;
     left: 50%;
-    margin-left: -25%;
-    width: 50%;
+    transform: translateX(-50%);
     border: 1px solid #999;
 }
