--- a/src/containers/Main/content.css
+++ b/src/containers/Main/content.css
@@ -1,27 +1,33 @@
+
+.container{
+    overflow: hidden;
+}
+
 .content{
     display:grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, minmax(200px, 1fr));
     grid-template-rows: repeat(2, 1fr);
-    grid-gap:10px;
+    grid-auto-columns: auto;
     grid-auto-flow: column;
-    width: 100%;
-    overflow: scroll;
+    width: calc(200px * 3);
+    transition: transform .4s ease-out;
 }
 
 .content-item{
     background: #556076;
+    border: 1px solid white;
     color:#fff;
     font-size:30px;
     width: 200px;
     height:200px;
     line-height:200px;
     text-align:center;
+    box-sizing: border-box;
 }
 
 
 @media (max-width:590px){
     .content{
-        grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: repeat(1, 1fr);
+        grid-template-columns: repeat(1, 1fr) !important;
     }
 }
