--- a/src/components/GridItem/gridItem.css
+++ b/src/components/GridItem/gridItem.css
@@ -1,3 +1,5 @@
+@import 'https://use.fontawesome.com/releases/v5.6.3/css/all.css';
+
 .content-item{
     background: #556076;
     border: 1px solid white;
@@ -8,9 +10,58 @@
     line-height:200px;
     text-align:center;
     box-sizing: border-box;
+    overflow: hidden;
+}
+
+.thumbnail{
+    width: 100%;
+    height: 100%;
+    vertical-align:top;
 }
 
 .image{
     width: 100%;
     height: 100%;
+    transition: all .3s ease-in;
+    position: relative;
+}
+
+.image:hover{
+    transform: scale(1.10);
+    cursor: pointer;
+}
+
+.image::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height:100%;
+    top:0;
+    left:0;
+    background:rgba(0,0,0,0.3);
+    opacity: 0;
+    transition: all .3s ease-in;
+}
+
+.image:hover::before {
+    opacity: 1;
+}
+
+.image::after {
+    content: "\f002";
+    font-family: "Font Awesome 5 Free", sans-serif;
+    font-weight: 900;
+    font-size: 20px;
+    position: absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    transform: translateY(40px);
+    opacity: 0;
+    transition: all .3s ease-in;
+}
+
+.image:hover::after {
+    transform: translateY(0);
+    opacity: 1;
 }
