--- a/src/components/GridItem/gridItem.css
+++ b/src/components/GridItem/gridItem.css
@@ -1,49 +1,48 @@
 @import 'https://use.fontawesome.com/releases/v5.6.3/css/all.css';
 
-.content-item{
+.content-item {
     background: #556076;
-    border: 1px solid white;
-    color:#fff;
-    font-size:30px;
+    color: #fff;
     width: 200px;
-    height:200px;
-    line-height:200px;
-    text-align:center;
-    box-sizing: border-box;
+    height: 200px;
     overflow: hidden;
 }
 
-.thumbnail{
+.thumbnail {
     width: 100%;
     height: 100%;
-    vertical-align:top;
+    vertical-align: top;
 }
 
-.image{
+.image, .video {
     width: 100%;
     height: 100%;
     transition: all .3s ease-in;
     position: relative;
 }
 
-.image:hover{
+.image{
+    text-align: center;
+}
+
+.image:hover {
     transform: scale(1.10);
     cursor: pointer;
 }
 
-.image::before {
+.image::before, .video::before {
     content: '';
     position: absolute;
     width: 100%;
-    height:100%;
-    top:0;
-    left:0;
-    background:rgba(0,0,0,0.3);
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.25);
     opacity: 0;
     transition: all .3s ease-in;
 }
 
-.image:hover::before {
+.image:hover::before, .video:hover::before {
     opacity: 1;
 }
 
@@ -53,15 +52,64 @@
     font-weight: 900;
     font-size: 20px;
     position: absolute;
-    top:0;
-    left:0;
+    top: 50%;
+    left: 0;
     width: 100%;
-    transform: translateY(40px);
+    transform: translateY(20px);
     opacity: 0;
     transition: all .3s ease-in;
 }
 
 .image:hover::after {
-    transform: translateY(0);
+    transform: translateY(-50%);
     opacity: 1;
+}
+
+
+.video .info-wrapper {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+}
+
+.video .info {
+    display: flex;
+    align-items: center;
+}
+
+.video .info button{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: none;
+    color: white;
+    float: left;
+    margin-right: 10px;
+    background-color: #59d240;
+    position: relative;
+}
+
+
+.video .info button::after{
+    content: "\f04b";
+    font-family: "Font Awesome 5 Free", sans-serif;
+    font-weight: 900;
+}
+
+.video .info button:hover{
+    cursor: pointer;
+}
+
+.video .info .info-content{
+    float: left;
+}
+
+.main-title{
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.subtitle{
+    font-weight: 400;
+    font-size: 12px;
 }
