--- a/src/components/GridItem/gridItem.css
+++ b/src/components/GridItem/gridItem.css
@@ -144,3 +144,32 @@
     font-weight: 400;
     font-size: 12px;
 }
+
+
+.quote-wrapper{
+    width: 100%;
+    height: 100%;
+    background-color: #323a44;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+}
+
+.quote-wrapper::before{
+    content: '\f10d';
+    font-family: "Font Awesome 5 Free", sans-serif;
+    font-weight: 900;
+    font-size: 17px;
+    width: 100%;
+    text-align: center;
+    color: #999;
+    margin-bottom: 10px;
+    margin-top: -20px;
+}
+
+.quote-text{
+    font-size: 26px;
+    font-weight: 400;
+}
