--- a/src/containers/Main/content.css
+++ b/src/containers/Main/content.css
@@ -16,6 +16,11 @@
 
 @media (max-width:590px){
     .content{
-        grid-template-columns: repeat(1, 1fr) !important;
+        grid-template-columns: 1fr !important;
+        width: 270px !important;
     }
+}
+
+.content-item{
+    min-width: 270px
 }
